# Teddy

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  GenerateProject.bat  README.md  Teddy.sln  UpdateGit.bat  imgui.ini  premake5.lua
Cuphead/: CMakeLists.txt  imgui.ini
Cuphead/assets/cache/shader/opengl/: Renderer2D_Quad.glsl.cached_opengl.frag  Renderer2D_Quad.glsl.cached_opengl.vert  Renderer2D_Quad.glsl.cached_vulkan.frag  Renderer2D_Quad.glsl.cached_vulkan.vert  Renderer2D_Text.glsl.cached_opengl.frag  Renderer2D_Text.glsl.cached_opengl.vert  Renderer2D_Text.glsl.cached_vulkan.frag  Renderer2D_Text.glsl.cached_vulkan.vert
Cuphead/assets/tmp/: filewatcher.tedwatch
Cuphead/debug/: TeddyProfile-Runtime.opt  TeddyProfile-Shutdown.opt  TeddyProfile-Startup.opt
Cuphead/src/: Cuphead2D.cpp  Cuphead2D.h  CupheadApp.cpp
Cuphead/src/Editor/: EditorLayer.cpp  EditorLayer.h
Cuphead/src/Editor/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Cuphead/src/Game/: CupheadApp.cpp  CupheadLayer.cpp  CupheadLayer.h  CupheadMainLayer.cpp  CupheadMainLayer.h  EndLayer.cpp  EndLayer.h  GameScenes.cpp  GameScenes.h  OverlayLayer.cpp  OverlayLayer.h  StartLayer.cpp  StartLayer.h
Cuphead/src/Game/Level/: CloudPlatform.cpp  CloudPlatform.h  DeathMenu.cpp  DeathMenu.h  Dragon.cpp  Dragon.h  LevelCategories.h  LevelScene.cpp  LevelScene.h  PauseMenu.cpp  PauseMenu.h  Player.cpp  Player.h
Cuphead/src/Game/Scenes/: DlcMenu.cpp  GameScenes.cpp  GameScenes.h  MainMenuScene.cpp  MainMenuScene.h  MainTitleScene.cpp  MainTitleScene.h  OptionsMenu.cpp  OptionsMenu.h  PlayMenu.cpp  ScrollBar.cpp  ScrollBar.h  Slider.cpp  Slider.h  TransitionScenes.cpp  TransitionScenes.h  VisualOptions.cpp
KeyStar/: CMakeLists.txt  KeyStar.vcxproj  KeyStar.vcxproj.filters  imgui.ini
KeyStar/assets/shaders/: Texture.glsl
KeyStar/profiles/: TeddyProfile-Runtime.json  TeddyProfile-Shutdown.json  TeddyProfile-Startup.json
KeyStar/src/: KeyStar2D.cpp  KeyStar2D.h  KeyStarApp.cpp
Sandbox/: CMakeLists.txt  imgui.ini
Sandbox/debug/: TeddyProfile-Shutdown.json  TeddyProfile-Startup.json
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
Scripts/: Win-GenerateProject.bat  Win-UpdateGitSubmodules.bat
Tedditor/: CMakeLists.txt  imgui.ini
Tedditor/assets/scenes/: Teddy.hazel  animation.teddy  atlas.teddy  backgroundtesting.teddy  blending test.teddy  physics.teddy  sensor.teddy  stress test.teddy  testing.teddy  text.teddy  text2.teddy  textures.teddy  yuh.teddy
Tedditor/assets/shaders/: FlatColor.glsl  Texture.glsl
Tedditor/src/: EditorLayer.cpp  EditorLayer.h  TedditorApp.cpp  TedditorLayer.cpp
Tedditor/src/Editor/: Editor.cpp  Editor.h
Tedditor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Teddy/: CmakeLists.txt  Teddy.vcxproj  Teddy.vcxproj.filters
Teddy/assets/shaders/: PostProcessing.glsl  Renderer2D_Circle.glsl  Renderer2D_Quad.glsl  Renderer2D_Text.glsl  Texture.glsl
Teddy/src/: Teddy.h  teddyPch.cpp  teddyPch.h  teddy_pch.cpp  teddy_pch.h
Teddy/src/Platform/OpenGL/: ImGuiBuild.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLImGuiBuild.cpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTextureFormats.cpp  OpenGLTextureFormats.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLUtils.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLWindow.cpp  OpenGLWindow.h
Teddy/src/Platform/Windows/: WindowsPlatformUtils.cpp
Teddy/src/Teddy/: Application.cpp  Application.h  CodeConverter.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MidiCodes.h  MouseCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  SDLInput.cpp  SDLInput.h  Teddy.h  Window.cpp  Window.h
Teddy/src/Teddy/Core/: Application.cpp  Application.h  Assert.h  AssetManager.cpp  AssetManager.h  Base.h  ButtonInteraction.cpp  ButtonInteraction.h  CodeConverter.cpp  CodeConverter.h  Core.h  EntryPoint.h  Font.cpp  Font.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MidiCodes.h  MidiDriver.h  MouseCodes.h  PCInput.cpp  PlatformDetection.h  SDLInput.cpp  SDLInput.h  TeddyInput.cpp  TeddyInput.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Teddy/src/Teddy/Debug/: Instrumentor.h
Teddy/src/Teddy/Events/: ApplicationEvent.h  Event.h  Events.cpp  KeyEvent.h  MidiDriver.cpp  MidiDriver.h  MidiEvent.h  MouseEvent.h  RTMidiEvent.cpp  RTMidiEvent.h  SDLEvent.cpp  SDL_Events.cpp
Teddy/src/Teddy/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Teddy/src/Teddy/Image/: Atlas.cpp  Atlas.h
Teddy/src/Teddy/Math/: Math.cpp  Math.h
Teddy/src/Teddy/Physics/: ContactEvent.h  PhysicsEvent.cpp  PhysicsEvent.h  SensorEvent.h
Teddy/src/Teddy/PostProcessing/: PostProcessing.cpp  PostProcessing.h
Teddy/src/Teddy/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsWindow.cpp  GraphicsWindow.h  MSDFData.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  SDLWindow.cpp  SDLWindow.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureFormats.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Teddy/src/Teddy/Scene/: Components.cpp  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Teddy/src/Teddy/Utils/: FileGroupWatcher.cpp  FileGroupWatcher.h  FileWatcher.cpp  FileWatcher.h  GPUUtils.cpp  GPUUtils.h  PlatformUtils.h  ShaderWatcher.cpp  ShaderWatcher.h
